Fix overflow

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/site-migration-instructions/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/site-migration-instructions/style.scss
@@ -22,6 +22,6 @@
 		margin-right: 0.75rem;
 		padding: 0.75rem 1rem;
 		width: 400px;
-		overflow-y: scroll;
+		overflow-x: scroll;
 	}
 }
